; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/appl/telnet/telnetd/extr_state.c_send_will.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/appl/telnet/telnetd/extr_state.c_send_will.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@will_wont_resp = common dso_local global i64* null, align 8
@will = common dso_local global i64 0, align 8
@TD_OPTIONS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"td: send will\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @send_will(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %32

7:                                                ; preds = %2
  %8 = load i64*, i64** @will_wont_resp, align 8
  %9 = load i32, i32* %3, align 4
  %10 = sext i32 %9 to i64
  %11 = getelementptr inbounds i64, i64* %8, i64 %10
  %12 = load i64, i64* %11, align 8
  %13 = icmp eq i64 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %7
  %15 = load i32, i32* %3, align 4
  %16 = call i64 @my_state_is_will(i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %22, label %18

18:                                               ; preds = %14, %7
  %19 = load i32, i32* %3, align 4
  %20 = call i64 @my_want_state_is_will(i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %18, %14
  br label %41

23:                                               ; preds = %18
  %24 = load i32, i32* %3, align 4
  %25 = call i32 @set_my_want_state_will(i32 %24)
  %26 = load i64*, i64** @will_wont_resp, align 8
  %27 = load i32, i32* %3, align 4
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds i64, i64* %26, i64 %28
  %30 = load i64, i64* %29, align 8
  %31 = add nsw i64 %30, 1
  store i64 %31, i64* %29, align 8
  br label %32

32:                                               ; preds = %23, %2
  %33 = load i64, i64* @will, align 8
  %34 = inttoptr i64 %33 to i8*
  %35 = load i32, i32* %3, align 4
  %36 = call i32 @output_data(i8* %34, i32 %35)
  %37 = load i32, i32* @TD_OPTIONS, align 4
  %38 = load i32, i32* %3, align 4
  %39 = call i32 @printoption(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 %38)
  %40 = call i32 @DIAG(i32 %37, i32 %39)
  br label %41

41:                                               ; preds = %32, %22
  ret void
}

declare dso_local i64 @my_state_is_will(i32) #1

declare dso_local i64 @my_want_state_is_will(i32) #1

declare dso_local i32 @set_my_want_state_will(i32) #1

declare dso_local i32 @output_data(i8*, i32) #1

declare dso_local i32 @DIAG(i32, i32) #1

declare dso_local i32 @printoption(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
